<resources>
    <string name="app_name">FoodHive</string>

    <string name="login">Login</string>

    <string name="register">Register</string>
    <string name="welcome">Welcome! please select an option below.</string>
    <string name="title_activity_login">Login</string>


    <string name="name">Name</string>

    <!-- Strings related to register -->
    <string name="text_register">Register</string>
    <string name="edit_name">enter name</string>
    <string name="email">Email</string>
    <string name="edit_email">email</string>
    <string name="password">Password</string>
    <string name="edit_password">password</string>
    <string name="submit">Submit</string>

    <!-- login activity -->
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="signed_in">Signed In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="loading">Loading</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="users">users</string>


    <!-- text detector class-->
    <string name="snap">Snap</string>
    <string name="detect">Detect</string>
    <string name="pick">Pick</string>


    <!-- menu activity -->
    <string name="addItem">Add Item</string>
    <string name="inventory">Inventory</string>
    <!---->

    <!--ADD PRODUCT ACTIVITY-->
    <string name="product_name">Product Name</string>
    <string name="product_type">Product Specific - e.g. oil, garlic, korma</string>
    <string-array name="spinnerFoodItems">
        <item>Perishable</item>
        <item>Non-Perishable</item>
        <item>Fruit</item>
        <item>Veg</item>
    </string-array>
    <string name="bestBefore">Best Before Date</string>
    <string name="category">Category</string>
    <string name="DaysUntilExpiry">Day(s)</string>
    <string name="product_desc">Product description</string>
    <string name="QR_Info">QR code information</string>
    <string name="QR">Add QR</string>

    <!--UPDATE PRODUCT ACTIVITY-->
    <string name="EditItem">Edit Item</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="search_recipe">Search Recipes</string>
    <string name="editQR">Edit QR</string>

    <!--NAVIGATION DRAWER -->

    <string name="food_inventory">Inventory</string>


    <!--MENU -->
    <string name="home">Home</string>
    <string name="add_food">Add food</string>
    <string name="user">User Profile</string>
    <string name="howTo">How to Use</string>


    <string name="Open">Open</string>
    <string name="Close">Close</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_drawer">testDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
